[package]
name = "models-cat"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
dirs = "6.0.0"
futures = "0.3.31"
indicatif = "0.17.11"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
sha2 = "0.10.8"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }
